Update references to labs-shared name and move sass files to fix imports

--- a/tests/dummy/app/styles/app.scss
+++ b/tests/dummy/app/styles/app.scss
@@ -64,7 +64,7 @@
 // //
 // // Labs UI modules (import all or some)
 // // --------------------------------------------------
-@import 'labs-shared/deprecated/all-modules';
+@import '@nycplanning/ember/deprecated/all-modules';
 @import "ember-power-select";
 
 
