--- a/addon/templates/components/deprecated/site-header.hbs
+++ b/addon/templates/components/deprecated/site-header.hbs
@@ -1,5 +1,9 @@
 <header role="banner">
+  {{#if betaNotice}}
     <a href="https://planninglabs.nyc/" class="labs-beta-notice hide-for-print">A beta project of NYC Planning Labs</a>
+  {{else}}
+    {{yield (hash pre=(component "deprecated/site-header-pre"))}}
+  {{/if}}
 
   <div class="grid-x grid-padding-x">
 
