--- a/addon/templates/components/deprecated/legend-item.hbs
+++ b/addon/templates/components/deprecated/legend-item.hbs
@@ -1,6 +1,6 @@
 <div class="grid-x">
   <div class="cell auto">
-    {{labs-ui/legend-icon icon=item.icon}}
+    {{deprecated/legend-icon icon=item.icon}}
     {{item.label}}
   </div>
   <div class="cell shrink">
