--- a/addon/templates/components/deprecated/legend-icon.hbs
+++ b/addon/templates/components/deprecated/legend-icon.hbs
@@ -1,16 +1,16 @@
-<span class="{{iconType}}">
-  {{#each icon.layers as |icon-layer|}}
+<span class="{{this.iconType}}">
+  {{#each this.icon.layers as |icon-layer|}}
 
-    {{#if (eq icon.type 'line')}}
-      {{deprecated/icons/line options=icon-layer}}
+    {{#if (eq this.icon.type 'line')}}
+      {{deprecated/icons/line options=this.icon-layer}}
     {{/if}}
 
-    {{#if (eq icon.type 'rectangle')}}
-      {{deprecated/icons/rectangle options=icon-layer}}
+    {{#if (eq this.icon.type 'rectangle')}}
+      {{deprecated/icons/rectangle options=this.icon-layer}}
     {{/if}}
 
-    {{#if (eq icon.type 'fa-icon')}}
-      {{deprecated/icons/fa-icon options=icon-layer}}
+    {{#if (eq this.icon.type 'fa-icon')}}
+      {{deprecated/icons/fa-icon options=this.icon-layer}}
     {{/if}}
 
   {{/each}}
