--- a/addon/templates/components/deprecated/legend-items.hbs
+++ b/addon/templates/components/deprecated/legend-items.hbs
@@ -1,3 +1,3 @@
-{{#each items as |item|}}
-  {{deprecated/legend-item item=item}}
+{{#each this.items as |item|}}
+  {{deprecated/legend-item item=this.item}}
 {{/each}}
