--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -1,8 +1,8 @@
 {{#labs-map
   id="main-map"
   mapLoaded=(action "mapLoaded")
-  layerGroups=model
-  initOptions=initMapOptions as |map|}}
+  layerGroups=this.model
+  initOptions=this.initMapOptions as |map|}}
   {{#map.labs-layers as |layers|}}
     {{#layers.tooltip}}
       Bananas
@@ -10,9 +10,8 @@
   {{/map.labs-layers}}
 {{/labs-map}}
 
-
-{{labs-search}}
-{{labs-bbl-lookup}}
+<LabsSearch />
+<LabsBblLookup />
 
 <div class="grid-container xlarge-margin-bottom xlarge-padding-bottom">
 
@@ -292,7 +291,7 @@ in the middle of some text.
         @label="Layer Group Label"
         @active={{true}}
         @tooltip="This is the layer group tooltip."
-        @icon={{model.exampleIcon}}
+        @icon={{this.model.exampleIcon}}
         @activeTooltip="This is the layer group warning message."
       >
         yielded content goes here
@@ -403,7 +402,7 @@ in the middle of some text.
     </div>
     <div class="cell large-7">
       <pre><code>&lt;LabsUi::LegendItems @items=&#123;{exampleItems}} /></code></pre>
-      <LabsUi::LegendItems @items={{model.exampleItems}} />
+      <LabsUi::LegendItems @items={{this.model.exampleItems}} />
     </div>
   </div>
 
@@ -440,7 +439,7 @@ in the middle of some text.
     </div>
     <div class="cell large-7">
       <pre><code>&lt;LabsUi::LegendItem @item=&#123;{exampleItem}} /></code></pre>
-      <LabsUi::LegendItem @item={{model.exampleItem}} />
+      <LabsUi::LegendItem @item={{this.model.exampleItem}} />
     </div>
   </div>
 
@@ -479,9 +478,9 @@ in the middle of some text.
       <pre><code>&lt;LabsUi::LegendIcon @icon=&#123;{exampleLine}} />
 &lt;LabsUi::LegendIcon @icon=&#123;{exampleRectangle}} />
 &lt;LabsUi::LegendIcon @icon=&#123;{exampleCircle}} /></code></pre>
-      <p><span class="legend-item"><LabsUi::LegendIcon @icon={{model.exampleLine}} /></span></p>
-      <p><span class="legend-item"><LabsUi::LegendIcon @icon={{model.exampleRectangle}} /></span></p>
-      <p><span class="legend-item"><LabsUi::LegendIcon @icon={{model.exampleCircle}} /></span></p>
+      <p><span class="legend-item"><LabsUi::LegendIcon @icon={{this.model.exampleLine}} /></span></p>
+      <p><span class="legend-item"><LabsUi::LegendIcon @icon={{this.model.exampleRectangle}} /></span></p>
+      <p><span class="legend-item"><LabsUi::LegendIcon @icon={{this.model.exampleCircle}} /></span></p>
     </div>
   </div>
 
