--- a/addon/components/labs-layers-tooltip.hbs
+++ b/addon/components/labs-layers-tooltip.hbs
@@ -1,3 +1,3 @@
-<div class="map-tooltip" style={{style}}>
-  {{yield (hash feature=feature layer=layer)}}
+<div class="map-tooltip" style={{this.style}}>
+  {{yield (hash feature=this.feature layer=this.layer)}}
 </div>
