--- a/addon/components/labs-ui/icons/fa-icon.hbs
+++ b/addon/components/labs-ui/icons/fa-icon.hbs
@@ -1,8 +1,8 @@
 {{!-- template-lint-disable no-inline-styles --}}
 <span class="legend-icon-layer" style={{this.spanStyle}}>
   <FaIcon
-    @icon={{options.fa-icon}}
-    @transform={{options.transform}}
-    @prefix={{options.prefix}}
+    @icon={{this.options.fa-icon}}
+    @transform={{this.options.transform}}
+    @prefix={{this.options.prefix}}
   />
 </span>
