--- a/addon/templates/components/deprecated/icons/fa-icon.hbs
+++ b/addon/templates/components/deprecated/icons/fa-icon.hbs
@@ -1,3 +1,3 @@
-<span style="{{spanStyle}}">
-  <FaIcon @icon={{options.fa-icon}} @transform={{options.transform}} @prefix={{options.prefix}} />
+<span style="{{this.spanStyle}}">
+  <FaIcon @icon={{this.options.fa-icon}} @transform={{this.options.transform}} @prefix={{this.options.prefix}} />
 </span>
