--- a/addon/templates/components/deprecated/layer-group-toggle.hbs
+++ b/addon/templates/components/deprecated/layer-group-toggle.hbs
@@ -1,35 +1,35 @@
-<div class="layer-group-toggle-header layer-{{dasherize label}}">
+<div class="layer-group-toggle-header layer-{{dasherize this.label}}">
   <div class="grid-x">
     <div class="cell auto ">
       <div class="switch tiny float-left">
-        <input class="switch-input" type="checkbox" checked={{if active 'checked'}}>
+        <input class="switch-input" type="checkbox" checked={{if this.active 'checked'}}>
         <label {{action 'toggle'}} class="switch-paddle">
           <span class="show-for-sr">Toggle Layer Group</span>
         </label>
       </div>
       <span {{action 'toggle' preventDefault=false}} class="layer-group-toggle-label" role="button">
-        {{label}}
-        {{#if active}}
-          {{#if icon}}
-            {{deprecated/legend-icon icon=icon}}
+        {{this.label}}
+        {{#if this.active}}
+          {{#if this.icon}}
+            {{deprecated/legend-icon icon=this.icon}}
           {{/if}}
         {{/if}}
       </span>
     </div>
     <div class="cell shrink layer-group-toggle-icons">
-      {{#if (and activeTooltip active)}}
-        {{deprecated/icon-tooltip tip=activeTooltip icon=activeTooltipIcon side='left' fixedWith=true}}
+      {{#if (and this.activeTooltip this.active)}}
+        {{deprecated/icon-tooltip tip=this.activeTooltip icon=this.activeTooltipIcon side='left' fixedWith=true}}
       {{/if}}
-      {{#if infoLink}}
-        <a href="{{infoLink}}" target="_blank" class="info-link"><FaIcon @icon={{infoLinkIcon}} @fixedWidth={{true}} /></a>
+      {{#if this.infoLink}}
+        <a href="{{this.infoLink}}" target="_blank" class="info-link"><FaIcon @icon={{this.infoLinkIcon}} @fixedWidth={{true}} /></a>
       {{/if}}
-      {{#if tooltip}}
-        {{deprecated/icon-tooltip tip=tooltip icon=tooltipIcon side='left' fixedWidth=true}}
+      {{#if this.tooltip}}
+        {{deprecated/icon-tooltip tip=this.tooltip icon=this.tooltipIcon side='left' fixedWidth=true}}
       {{/if}}
     </div>
   </div>
 </div>
-{{#if active}}
+{{#if this.active}}
   <div class="layer-group-toggle-content">
     {{yield}}
   </div>
