--- a/addon/templates/components/deprecated/site-header.hbs
+++ b/addon/templates/components/deprecated/site-header.hbs
@@ -1,5 +1,5 @@
 <header role="banner">
-  {{#if betaNotice}}
+  {{#if this.betaNotice}}
     <a href="https://planninglabs.nyc/" class="labs-beta-notice hide-for-print">A beta project of NYC Planning Labs</a>
   {{else}}
     {{yield (hash pre=(component "deprecated/site-header-pre"))}}
@@ -7,18 +7,18 @@
 
   <div class="grid-x grid-padding-x">
 
-    <div {{action (mut closed) true preventDefault=false}} class="branding cell {{if responsiveNav (concat responsiveSize '-auto shrink') 'auto'}}">
+    <div {{action (mut this.closed) true preventDefault=false}} class="branding cell {{if this.responsiveNav (concat responsiveSize '-auto shrink') 'auto'}}">
       <a class="dcp-link" href="http://www1.nyc.gov/site/planning/index.page"><img class="dcp-logo" src="https://raw.githubusercontent.com/NYCPlanning/logo/master/dcp_logo_772.png" alt="NYC Planning"></a>
       {{yield (hash title = (component 'deprecated/site-title'))}}
     </div>
 
     {{#if responsiveNav}}
-      <div class="cell auto hide-for-{{responsiveSize}} text-right">
-        <button {{action (mut closed) (not closed)}} class="responsive-nav-toggler hide-for-print">Menu</button>
+      <div class="cell auto hide-for-{{this.responsiveSize}} text-right">
+        <button {{action (mut this.closed) (not this.closed)}} class="responsive-nav-toggler hide-for-print">Menu</button>
       </div>
     {{/if}}
 
-    <nav {{action (mut closed) (not closed) preventDefault=false}} role="navigation" class="cell {{if responsiveNav (concat responsiveSize '-shrink responsive') 'shrink'}} {{if (and responsiveNav closed) (concat 'show-for-' responsiveSize)}} hide-for-print">
+    <nav {{action (mut cthis.losed) (not this.closed) preventDefault=false}} role="navigation" class="cell {{if this.responsiveNav (concatthis. responsiveSize '-shrink responsive') 'shrink'}} {{if (and this.responsiveNav closed) (concat 'show-for-' responsiveSize)}} hide-for-print">
       {{yield (hash nav = (component 'deprecated/site-nav'))}}
     </nav>
 
