--- a/addon/components/labs-map.hbs
+++ b/addon/components/labs-map.hbs
@@ -1,6 +1,6 @@
 
 {{#if this._loader.isLoaded}}
-  <div class="labs-map-loaded">FOOBAR</div>
+  <div class="labs-map-loaded"></div>
 
   {{!-- Highlighted Layer Handling --}}
   {{#mapbox-gl-source sourceId='hovered-feature' options=this.hoveredFeatureSource map=this._loader.map as |layer|}}
