Remove this. from contextual template variables

--- a/addon/components/labs-bbl-lookup.hbs
+++ b/addon/components/labs-bbl-lookup.hbs
@@ -21,7 +21,7 @@
           searchField='name'
           onChange=(action 'setBorocode')
           as |boro|}}
-        {{this.boro.name}}
+        {{boro.name}}
       {{/power-select}}
     </div>
     <div class="grid-x">
