--- a/addon/components/labs-bbl-lookup.hbs
+++ b/addon/components/labs-bbl-lookup.hbs
@@ -28,13 +28,13 @@
       <div class="cell auto block-container">
         <label>
           Block
-          {{input class="bbl-lookup--block-input" type='number' value=this.block min='1' max='99999' key-up=(action 'validate')}}
+          <Input class="bbl-lookup--block-input" @type="number" @value={{this.block}} min="1" max="99999" {{on "keyup" (action this.actions.validate)}} />
         </label>
       </div>
       <div class="cell auto lot-container">
         <label>
           Lot
-          {{input class="bbl-lookup--lot-input" type='number' value=this.lot min='1' max='9999' key-up=(action 'validate')}}
+          <Input class="bbl-lookup--lot-input" @type="number" @value={{this.lot}} min="1" max="9999" {{on "keyup" (action this.actions.validate)}} />
         </label>
       </div>
     </div>
