Turn off curly component syntax invocation rule and run hsb litner with --fix

--- a/addon/components/labs-search.hbs
+++ b/addon/components/labs-search.hbs
@@ -1,5 +1,5 @@
 <Input type='text'
-  @placeholder={{this.searchPlaceholder}}
+  placeholder={{this.searchPlaceholder}}
   class='map-search-input'
   @value={{this.searchTerms}}
   {{on 'focus' (action 'handleFocusIn')}}
