--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -534,7 +534,7 @@ in the middle of some text.
     </div>
     <div class="cell large-7">
       <p>By default, Tooltips have a dark background and Popovers have a light background:</p>
-      <button class="button">
+      <button class="button" type="button">
         Hover me for a Tooltip
         <EmberTooltip @text="This is just a regular tooltip." />
       </button>
