--- a/addon/components/labs-ui/layer-group-toggle.hbs
+++ b/addon/components/labs-ui/layer-group-toggle.hbs
@@ -22,7 +22,7 @@
           <LabsUi::IconTooltip @tip={{@activeTooltip}} @icon={{this.activeTooltipIcon}} @side="left" @fixedWith={{true}} />
         {{/if}}
         {{#if @infoLink}}
-          <a href={{@infoLink}} target="_blank" rel="noopener" class="info-link"><FaIcon @icon="external-link-alt" /></a>
+          <a href={{@infoLink}} target="_blank" rel="noopener noreferrer" class="info-link"><FaIcon @icon="external-link-alt" /></a>
         {{/if}}
         {{#if @tooltip}}
           <LabsUi::IconTooltip @tip={{@tooltip}} @icon={{this.tooltipIcon}} @side="left" @fixedWidth={{true}} />
