--- a/addon/templates/components/deprecated/site-header.hbs
+++ b/addon/templates/components/deprecated/site-header.hbs
@@ -1,4 +1,4 @@
-<header role="banner">
+<header>
   {{#if this.betaNotice}}
     <a href="https://planninglabs.nyc/" class="labs-beta-notice hide-for-print">A beta project of NYC Planning Labs</a>
   {{else}}
@@ -14,7 +14,7 @@
 
     {{#if this.responsiveNav}}
       <div class="cell auto hide-for-{{this.responsiveSize}} text-right">
-        <button {{action (mut this.closed) (not this.closed)}} class="responsive-nav-toggler hide-for-print">Menu</button>
+        <button class="responsive-nav-toggler hide-for-print" type="button" {{action (mut this.closed) (not this.closed)}}>Menu</button>
       </div>
     {{/if}}
 
