--- a/addon/components/labs-ui/layer-group-toggle.hbs
+++ b/addon/components/labs-ui/layer-group-toggle.hbs
@@ -3,8 +3,8 @@
     <div class="grid-x">
       <div class="cell auto">
         <div class="switch tiny float-left">
-          <input class="switch-input" type="checkbox" checked={{if this.isActive "checked"}}>
-          <label {{action "toggle"}} class="switch-paddle">
+          <input id="layer-{{dasherize this.label}}" class="switch-input" type="checkbox" checked={{if this.isActive "checked"}}>
+          <label {{action "toggle"}} for="layer-{{dasherize this.label}}" class="switch-paddle">
             <span class="show-for-sr">Toggle Layer Group</span>
           </label>
         </div>
