Add square hatch legend icon
Implement a square icon with a hatching pattern.
Make the background color, hatch color, and hatch width adjustable

closes #15

--- a/addon/components/labs-ui/legend-icon.hbs
+++ b/addon/components/labs-ui/legend-icon.hbs
@@ -17,6 +17,10 @@
         <LabsUi::Icons::rectangle @options={{icon-layer}} />
       {{/if}}
 
+      {{#if (eq @icon.type "square-hatch")}}
+        <LabsUi::Icons::square-hatch @options={{icon-layer}} />
+      {{/if}}
+
       {{#if (eq @icon.type "fa-icon")}}
         <LabsUi::Icons::fa-icon @options={{icon-layer}} />
       {{/if}}
