--- a/addon/components/labs-ui/icons/square-hatch.hbs
+++ b/addon/components/labs-ui/icons/square-hatch.hbs
@@ -1,10 +1,9 @@
-<svg class="legend-icon-layer">
-  <pattern id="diagonalHatch" patternUnits="userSpaceOnUse" width="4" height="4">
-  <path d="M-1,1 l2,-2
-          M0,4 l4,-4
-          M3,5 l2,-2"
-          style="stroke:black; stroke-width:1" />
-  </pattern>
-  <path fill="blue" d="M0 96C0 60.7 28.7 32 64 32H384c35.3 0 64 28.7 64 64V416c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V96z"></path>
-  <path fill="url(#diagonalHatch)" d="M0 96C0 60.7 28.7 32 64 32H384c35.3 0 64 28.7 64 64V416c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V96z"></path>
+<svg width=".875em" height=".875em">
+  <defs>
+          <pattern id="diagonalHatch" patternUnits="userSpaceOnUse" width="4" height="8" patternTransform="rotate(-45 2 2)">
+              <path d="M -1,2 l 6,0" stroke="#000000" stroke-width=".5"></path>
+        </pattern>
+  </defs>
+  <rect fill="rgba(0, 197, 255, 0.2)" rx="2" ry="2" width="100%" height="100%"/>
+  <rect fill="url(#diagonalHatch)" height="100%" width="100%" ry="2" rx="2"/>
 </svg>
