--- a/addon/components/labs-ui/icons/square-hatch.hbs
+++ b/addon/components/labs-ui/icons/square-hatch.hbs
@@ -1,9 +1,9 @@
 <svg width=".875em" height=".875em">
   <defs>
     <pattern id="diagonalHatch" patternUnits="userSpaceOnUse" width="4" height="4" patternTransform="rotate(-45 2 2)">
-      <path d="M -1,2 l 6,0" stroke="#000000" stroke-width=".5"></path>
+      <path d="M -1,2 l 6,0" stroke={{this.hatchColor}} stroke-width={{this.hatchWidth}} />
     </pattern>
   </defs>
-  <rect fill="rgba(0, 197, 255, 0.2)" rx="2" ry="2" width="100%" height="100%" />
+  <rect fill={{this.backgroundColor}} rx="2" ry="2" width="100%" height="100%" />
   <rect fill="url(#diagonalHatch)" ry="2" rx="2" height="100%" width="100%" />
 </svg>
